--- a/fr-FR.lang
+++ b/fr-FR.lang
@@ -1,91 +1,111 @@
 addOption = Ajouter une Option
 allFieldsRemoved = Tous les champs ont été supprimés.
+allowMultipleFiles = Autoriser les utilisateurs à uploader plusieurs fichiers
 allowSelect = Autoriser la sélection
-autocomplete = Autocompletion
+autocomplete = Auto-complétion
 button = Bouton
-cannotBeEmpty = Ce champ ne peut être vide
+cannotBeEmpty = Ce champ ne peut pas être vide
 checkboxGroup = Groupe de cases à cocher
 checkbox = Case à cocher
 checkboxes = Cases à cocher
-class = Classe
+className = Classe
 clearAllMessage = Etes-vous sur de vouloir vider tous les champs?
 clear = Vider
 close = Fermer
 content = Contenu
-copy = Copier danss le presse-papier
+copy = Dupliquer
+copyButton = &#43;
+copyButtonTooltip = Copier
 dateField = Champ Date
 description = Texte d'Aide
 descriptionField = Description
 devMode = Mode Developpeur
-editNames = Editer les Names
-editorTitle = Form Elements
+editNames = Editer les noms
+editorTitle = Elements de formulaire
 editXML = Editer le XML
+enableOther = Droit Utilisateur
+enableOtherMsg = Permettre l'ajout d'options supplémentaires
 fieldDeleteWarning: faux
-fieldVars = Field Variables
-fieldNonEditable = Ce champ ne peut être éditer.
+fieldVars = Variables de champ
+fieldNonEditable = Ce champ ne peut pas être édité.
 fieldRemoveWarning = Etes-vous sur de vouloir supprimer ce champ?
 fileUpload = Upload de fichier
-formUpdated = Le Formulaire a été mis à jour
-getStarted = Glisser-poser un champ d ela liste de droite vers cette zone
-header = Header
-hide = Cacher
-hidden = Champ de type Hidden
+formUpdated = Le formulaire a été mis à jour
+getStarted = Glisser-déposer un champ de la liste de droite vers cette zone
+header = En-tête
+hide = Editer
+hidden = Champ de type "Hidden"
+inline = aligné
+inlineDesc = Afficher les boutons en ligne
 label = Label
-labelEmpty = Le Label d'un champ ne peut etre vide
+labelEmpty = Le Label d'un champ ne peut pas etre vide
 limitRole = Limiter l'acces à un ou plusieurs des rôles suivants:
 mandatory = Obligatoire
 maxlength = Longueur max.
 minOptionMessage = Ce champ nécessite au moins 2 options
-name = Name
+minSelectionRequired = Selection minimal requise
+multipleFiles = Champs Multiples
+name = Nom
 no = Non
+noFieldsToClear = Aucun champ à nettoyer
+number = nombre
 off = Off
 on = On
 option = Option
+options = Options
 optional = optionnel
 optionEmpty = Une valeur d'option est exigée
+optionLabelPlaceholder = Label
+optionValuePlaceholder = Valeur par défaut
 paragraph = Paragraphe
 placeholder = Placeholder
-placeholder.value = Value
+placeholder.value = Valeur par défaut
 placeholder.label = Label
 placeholder.text = Saisir du Texte
 placeholder.textarea = Saisir un Texte long
 placeholder.email = Saisir votre adresse email
-placeholder.placeholder = Placeholder
+placeholder.placeholder = Exemple de valeur attendue
 placeholder.className = classes séparées par des espaces
 placeholder.password = Saisir votre mot de passe
 preview = Pré-visualisation
 radioGroup = Groupe de Boutons Radio
 radio = Bouton Radio
 removeMessage = Supprimer l'élément
+removeOption = Supprimer une option
 remove = &#215;
 required = Obligatoire
+reset = Réinitialiser
 richText = Editeur de texte
+rows = Lignes
 roles = Accès
 save = Enregistrer
 selectOptions = Options
-select = Select
+select = Selectionner
 selectColor =  Couleur de Sélection
 selectionsMessage = Autorise la sélection multiple
 size = Taille
 sizes = Tailles
-sizes.xs = Extra Small
-sizes.sm = Small
-sizes.m = Defaut
+sizes.xs = Très petit
+sizes.sm = Petit
+sizes.m = Défaut
 sizes.lg = Large
+step = Pas
 style = Style
 styles = Styles
 styles.btn = Styles de Bouton
-styles.btn.default = Defaut
+styles.btn.default = Défaut
 styles.btn.danger = Danger
 styles.btn.info = Info
-styles.btn.primary = Primary
-styles.btn.success = Success
-styles.btn.warning = Warning
+styles.btn.primary = Primaire
+styles.btn.success = Succès
+styles.btn.warning = Attention
+submit = Soumettre
 subtype = Type
-text = Champ de Saisie Texte
-textArea = Text Area
-toggle = Toggle
-warning = Warning!
+text = Champ de Saisie de texte
+textArea = Zone de texte
+toggle = Activer/désactiver
+warning = Attention!
+value = Valeur
 viewXML = </>
 viewJSON = { }
-yes = Yes
+yes = Oui
